--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@ body{
 <li><a href="https://salmandascript.github.io/ConvictedRecords.com/artist.html">
 	<img class="picture" src="Riddims.png"/> Various Artist Profile</a></li>
 	
-<li><a href="https://salmandascript.github.io/ConvictedRecords.com/SearchMusic.html"><img class="picture" src="Convicted2.png"/> Album, Mixatape, Ep or Single</a></li>
+<li><a href="https://salmandascript.github.io/Convicted/SearchMusic.html"><img class="picture" src="Convicted2.png"/> Album, Mixatape, Ep or Single</a></li>
 	
-<li><a href="https://salmandascript.github.io/ConvictedRecords.com/contact.html">	<img class="picture" src="contact.png"/> Contact Information</a></li>
+<li><a href="https://salmandascript.github.io/Convicted/contact.html">	<img class="picture" src="contact.png"/> Contact Information</a></li>
 
-<li><a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html">
+<li><a href="https://salmandascript.github.io/Convicted/feedBack.html">
 	<img class="picture" src="about.png"/>Feedback & Comments</a></li>
 	
 	 <li><a href="https://salmandascript.github.io/AfricaOnline/"><img class="picture" src="Royal.png"/> Africa Online</a></li>
@@ -106,7 +106,7 @@ body{
 <div class="panel-body"><img src="OneLife.png" width="100%" height="340px"/><hr><p>Download All Songs via the Link below, you can as well send us FeedBack ☺✊💝.</p></div> 
 <div class="panel-footer clearfix"> 
 <div class="pull-right"> 
-<a href="https://salmandascript.github.io/Convicted/feedBack.html"
+<a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html"
  class="btn btn-primary btn-sm">FeedBack</a> 
 <a href="#" class="btn btn-primary btn-sm">Download</a> 
 <a href="#" class="btn btn-primary btn-sm">&laquo;</a> 
@@ -122,7 +122,7 @@ body{
 <div class="panel-body"><img src="Chimangansasa.jpg" width="100%" height="340px"/><hr><p>Download All Songs via the Link below, you can as well send us FeedBack ☺✊💝.</p></div> 
 <div class="panel-footer clearfix"> 
 <div class="pull-right"> 
-<a href="https://salmandascript.github.io/Convicted/feedBack.html"
+<a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html"
  class="btn btn-primary btn-sm">FeedBack</a>
 <a href="https://youtu.be/e7vZsZOHcqc?si=4JReHqajxwlVtUwM" class="btn btn-primary btn-sm">Download</a> 
 <a href="#" class="btn btn-primary btn-sm">&laquo;</a> 
@@ -136,7 +136,7 @@ body{
 <div class="panel-body"><img src="StopTheWar.jpg" width="100%" height="340px"/><hr><p>Download All Songs via the Link below, you can as well send us FeedBack ☺✊💝.</p></div> 
 <div class="panel-footer clearfix"> 
 <div class="pull-right"> 
-<a href="https://salmandascript.github.io/Convicted/feedBack.html"
+<a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html"
  class="btn btn-primary btn-sm">FeedBack</a> 
 <a href="#" class="btn btn-primary btn-sm">Download</a> 
 <a href="#" class="btn btn-primary btn-sm">&laquo;</a> 
@@ -149,7 +149,7 @@ body{
 <div class="panel-body"><img src="Namiza.jpg" width="100%" height="340px"/><hr><p>Download All Songs via the Link below, you can as well send us FeedBack ☺✊💝.</p></div> 
 <div class="panel-footer clearfix"> 
 <div class="pull-right"> 
-<a href="https://salmandascript.github.io/Convicted/feedBack.html"
+<a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html"
  class="btn btn-primary btn-sm">FeedBack</a> 
 <a href="#" class="btn btn-primary btn-sm">Download</a> 
 <a href="#" class="btn btn-primary btn-sm">&laquo</a> 
@@ -162,7 +162,7 @@ body{
 <div class="panel-body"><img src="Chandamare.jpg" width="100%" height="340px"/><hr><p>Download All Songs via the Link below, you can as well send us FeedBack ☺✊💝.</p></div> 
 <div class="panel-footer clearfix"> 
 <div class="pull-right"> 
-<a href="https://salmandascript.github.io/Convicted/feedBack.html"
+<a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html"
  class="btn btn-primary btn-sm">FeedBack</a> 
 <a href="#" class="btn btn-primary btn-sm">Download</a> 
 <a href="#" class="btn btn-primary btn-sm">&laquo;</a> 
@@ -175,7 +175,7 @@ body{
 <div class="panel-body"><img src="Oceangate.jpg" width="100%" height="340px"/><hr><p>Download All Songs via the Link below, you can as well send us FeedBack ☺✊💝.</p></div> 
 <div class="panel-footer clearfix"> 
 <div class="pull-right"> 
-<a href="https://salmandascript.github.io/Convicted/feedBack.html"
+<a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html"
  class="btn btn-primary btn-sm">FeedBack</a> 
 <a href="#" class="btn btn-primary btn-sm">Download</a> 
 <a href="#" class="btn btn-primary btn-sm">&laquo;</a> 
@@ -190,7 +190,7 @@ body{
 
 <div class="panel-footer clearfix"> 
 <div class="pull-right"> 
-<a href="https://salmandascript.github.io/Convicted/feedBack.html"
+<a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html"
  class="btn btn-primary btn-sm">FeedBack</a>
 <a href="#" class="btn btn-primary btn-sm">Download</a> 
 <a href="#" class="btn btn-primary btn-sm">&laquo;</a> 
@@ -203,7 +203,7 @@ body{
 <div class="panel-body"><img src="StopTheWar2.jpg" width="100%" height="340px"/><hr><p>Download All Songs via the Link below, you can as well send us FeedBack ☺✊💝.</p></div> 
 <div class="panel-footer clearfix"> 
 <div class="pull-right"> 
-<a href="https://salmandascript.github.io/Convicted/feedBack.html"
+<a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html"
  class="btn btn-primary btn-sm">FeedBack</a> 
 <a href="#" class="btn btn-primary btn-sm">Download</a> 
 <a href="#" class="btn btn-primary btn-sm">&laquo;</a> 
@@ -216,7 +216,7 @@ body{
 <div class="panel-body"><img src="Chimangansasa2.jpg" width="100%" height="340px"/><hr><p>Download All Songs via the Link below, you can as well send us FeedBack ☺✊💝.</p></div> 
 <div class="panel-footer clearfix"> 
 <div class="pull-right"> 
-<a href="https://salmandascript.github.io/Convicted/feedBack.html" class="btn btn-primary btn-sm">FeedBack</a> 
+<a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html" class="btn btn-primary btn-sm">FeedBack</a> 
 <a href="https://dancehall265.com/oga-henz-chimangansasa-riddim/" class="btn btn-primary btn-sm">Download</a> 
 <a href="#" class="btn btn-primary btn-sm">&laquo;</a> 
 </div> 
