--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@ body{
 <li><a href="https://salmandascript.github.io/ConvictedRecords.com/artist.html">
 	<img class="picture" src="Riddims.png"/> Various Artist Profile</a></li>
 	
-<li><a href="https://salmandascript.github.io/Convicted/SearchMusic.html"><img class="picture" src="Convicted2.png"/> Album, Mixatape, Ep or Single</a></li>
+<li><a href="https://salmandascript.github.io/ConvictedRecords.com/SearchMusic.html"><img class="picture" src="Convicted2.png"/> Album, Mixatape, Ep or Single</a></li>
 	
-<li><a href="https://salmandascript.github.io/Convicted/contact.html">	<img class="picture" src="contact.png"/> Contact Information</a></li>
+<li><a href="https://salmandascript.github.io/ConvictedRecords.com/contact.html">	<img class="picture" src="contact.png"/> Contact Information</a></li>
 
-<li><a href="https://salmandascript.github.io/Convicted/feedBack.html">
+<li><a href="https://salmandascript.github.io/ConvictedRecords.com/feedBack.html">
 	<img class="picture" src="about.png"/>Feedback & Comments</a></li>
 	
 	 <li><a href="https://salmandascript.github.io/AfricaOnline/"><img class="picture" src="Royal.png"/> Africa Online</a></li>
