--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body{
 <div id="navbarCollapse" class="collapse navbar-collapse"> 
 
 <ol class="nav navbar-nav"> 
-<li><a href="https://salmandascript.github.io/ConvictedRecords.com/artist.html">
+<li><a href="https://salmandascript.github.io/ConvictedRecords.com/Artist.html">
 	<img class="picture" src="Riddims.png"/> Various Artist Profile</a></li>
 	
 <li><a href="https://salmandascript.github.io/ConvictedRecords.com/SearchMusic.html"><img class="picture" src="Convicted2.png"/> Album, Mixatape, Ep or Single</a></li>
