--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@ background: linear-gradient(to right, darkorange, maroon);
         <img src="Gmail.png" alt="Gmail" style="width:30px"/> E-mail</a></div><br>-->
         
         <div><a onclick="facebook();">
-        <img src="Facebook.png" alt="Facebook" style="width:30px"/>Facebook</a></div><br>
+        <img src="facebook.png" alt="Facebook" style="width:30px"/>Facebook</a></div><br>
         
       <!--  <div><a onclick="twitter();">
         <img src="Twitter.png" alt="Twitter" style="width:30px"/>Twitter</a></div><br>-->
