--- a/Artist.html
+++ b/Artist.html
@@ -201,17 +201,17 @@ input{
 <p class="artist">Rising Reggae and Dancehall producer & Artist. Convicted Records Lebel owner.</p>
 
 <h5>Social media Links</h5>
-<center><a style="color: maroon" href="#"><img class="picture" src="youtube.png"/></a>
+<center><a style="color: maroon" href="#"><img class="picture" src="Youtube.png"/></a>
 	
 	<a style="color: maroon" href="#"><img class="picture" src="faceBook.png"/></a>
 
 <a style="color: maroon" href="#"><img class="picture" src="Telegram.png"/></a>
 
-<a style="color: maroon" href="#"><img class="picture" src="instagram.png"/></a>
+<a style="color: maroon" href="#"><img class="picture" src="lnstagram.png"/></a>
 
-<a style="color: maroon" href="#"><img class="picture" src="whatsapp.png"/></a>
+<a style="color: maroon" href="#"><img class="picture" src="Whatsapp.png"/></a>
 
-<a style="color: maroon" href="#"><img class="picture" src="twitter.png"/></a>
+<a style="color: maroon" href="#"><img class="picture" src="Twitter.png"/></a>
 
 <a style="color: maroon" href="#"><img class="picture" src="tiktok.png"/></a></center>
 
@@ -249,17 +249,17 @@ input{
 <p class="artist">An introvent, and a creative mind making music, a'm a computer wizard.</p>
 
 <h5>Social media Links</h5>
-<center><a style="color: maroon" onclick="salmandaYoutube();"><img class="picture" src="youtube.png"/></a>
+<center><a style="color: maroon" onclick="salmandaYoutube();"><img class="picture" src="Youtube.png"/></a>
 
 	<a style="color: maroon" onclick="salmandaFacebook();"><img class="picture" src="faceBook.png"/></a>
 
 <a style="color: maroon" onclick="salmandaTelegram();"><img class="picture" src="Telegram.png"/></a>
 
-<a style="color: maroon" href="salmandaInstagram();"><img class="picture" src="instagram.png"/></a>
+<a style="color: maroon" href="salmandaInstagram();"><img class="picture" src="lnstagram.png"/></a>
 
-<a style="color: maroon" onclick="salmandaWhatsapp();"><img class="picture" src="whatsapp.png"/></a>
+<a style="color: maroon" onclick="salmandaWhatsapp();"><img class="picture" src="Whatsapp.png"/></a>
 
-<a style="color: maroon" onclick="salmandaX();"><img class="picture" src="twitter.png"/></a>
+<a style="color: maroon" onclick="salmandaX();"><img class="picture" src="Twitter.png"/></a>
 
 <a style="color: maroon" onclick="salmandaTiktok();"><img class="picture" src="tiktok.png"/></a></center>
 
